--- a/app/views/events/_marker.html.erb
+++ b/app/views/events/_marker.html.erb
@@ -1,3 +1,1 @@
-<div class="badge rounded-pill bg-primary fs-6">
-  <%= event.title %>
-</div>
+<%= image_tag "map_marker.png", height: 30, width: 30, alt: "Logo" %>
