created controller methods|

--- a/app/views/dashboard/user_events.html.erb
+++ b/app/views/dashboard/user_events.html.erb
@@ -1,5 +1,5 @@
 <div class="container mt-4">
-  <h2 class="mb-2">My Events</h2>
+  <h2 class="mb-4">My Events</h2>
 
   <ul class="nav nav-tabs overflow-wrap" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
@@ -15,19 +15,19 @@
 
   <div class="tab-content" id="myTabContent">
 
-  <div class="tab-pane fade show active mt-3" id="attending" role="tabpanel" aria-labelledby="attending-tab">
+  <div class="tab-pane fade show active mt-4" id="attending" role="tabpanel" aria-labelledby="attending-tab">
     <p>Attending events displayed here</p>
   </div>
 
-  <div class="tab-pane fade mt-3" id="hosting" role="tabpanel" aria-labelledby="hosting-tab">
+  <div class="tab-pane fade mt-4" id="hosting" role="tabpanel" aria-labelledby="hosting-tab">
     <p>Hosting events displayed here</p>
   </div>
 
-  <div class="tab-pane fade mt-3" id="past" role="tabpanel" aria-labelledby="past-tab">
+  <div class="tab-pane fade mt-4" id="past" role="tabpanel" aria-labelledby="past-tab">
     <p>Past events displayed here</p>
   </div>
 
-  <div class="text-center">
+  <div class="text-center mt-6">
     <%= link_to "Back to Profile", profile_path, class: "btn btn-outline-primary" %>
   </div>
 </div>
