--- a/app/views/dashboard/user_groups.html.erb
+++ b/app/views/dashboard/user_groups.html.erb
@@ -1,5 +1,5 @@
 <div class="container mt-4">
-  <h2 class="mb-2">My Groups</h2>
+  <h2 class="mb-4">My Groups</h2>
 
   <ul class="nav nav-tabs overflow-wrap" id="myTab" role="tablist">
     <li class="nav-item" role="presentation">
@@ -12,15 +12,15 @@
 
   <div class="tab-content" id="myTabContent">
 
-  <div class="tab-pane fade show active mt-3" id="member" role="tabpanel" aria-labelledby="member-tab">
-    <p>Groups I'm a member displayed here</p>
+  <div class="tab-pane fade show active mt-4" id="member" role="tabpanel" aria-labelledby="member-tab">
+    <p>Groups I'm a member of displayed here</p>
   </div>
 
-  <div class="tab-pane fade mt-3" id="organiser" role="tabpanel" aria-labelledby="organiser-tab">
-    <p>GRoups I'm organising displayed here</p>
+  <div class="tab-pane fade mt-4" id="organiser" role="tabpanel" aria-labelledby="organiser-tab">
+    <p>Groups I'm organising displayed here</p>
   </div>
 
-  <div class="text-center">
+  <div class="text-center mt-6">
     <%= link_to "Back to Profile", profile_path, class: "btn btn-outline-primary" %>
   </div>
 </div>
