--- a/app/assets/stylesheets/pages/_group_show.scss
+++ b/app/assets/stylesheets/pages/_group_show.scss
@@ -4,3 +4,14 @@
   overflow-x: auto;
   overflow-y: hidden;
 }
+
+.main-post{
+  background-color: grey;
+  margin-bottom: 15px;
+}
+
+.related-post{
+  background-color: lightgray;
+  margin-bottom: 15px;
+  width: 75%;
+}
