--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -13,4 +13,5 @@
 @import 'message';
 @import "unjoined_group_members";
 @import "event_card_long";
+@import "group_card_long";
 @import "index_category_bar"
