event show polished

--- a/app/assets/stylesheets/components/_chatroom.scss
+++ b/app/assets/stylesheets/components/_chatroom.scss
@@ -1,5 +1,5 @@
 .chatroom {
-  background: white;
+  background: lightgrey;
   margin-top: 9px;
   height: calc(100vh - 75px);
   display: flex;
@@ -7,7 +7,7 @@
   justify-content: space-between;
   flex-grow: 1;
 
-  h1 {
+  h2 {
     border-bottom: 1px solid $gray-200;
     margin-bottom: 0;
     padding: 1rem;
