--- a/app/assets/stylesheets/components/_home_banner.scss
+++ b/app/assets/stylesheets/components/_home_banner.scss
@@ -14,7 +14,7 @@
   font-weight: bold;
 
   // Change font to make the h2 pop out of BG image
-  color:#fff;
+  color: #FFFFFF;
   font-size: 60px;
   font-weight: bold;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
