delete user from group

--- a/app/assets/stylesheets/pages/_group_show.scss
+++ b/app/assets/stylesheets/pages/_group_show.scss
@@ -8,10 +8,12 @@
 .main-post{
   background-color: grey;
   margin-bottom: 15px;
+  padding: 12px
 }
 
 .related-post{
   background-color: lightgray;
   margin-bottom: 15px;
-  width: 75%;
+  width: 82%;
+  padding: 12px;
 }
