started styling profile

--- a/app/views/dashboard/profile.html.erb
+++ b/app/views/dashboard/profile.html.erb
@@ -8,7 +8,7 @@
       <% end %>
     </div>
 
-    <div class="welcome-msg text-center">
+    <div class="welcome-msg">
       <h2>Welcome, <%= current_user.first_name.capitalize %> 👋 </h2>
     </div>
 
