--- a/app/views/events/edit.html.erb
+++ b/app/views/events/edit.html.erb
@@ -1,26 +1,30 @@
-<h1>Hello from the Edit the Event Page</h1>
+ <div class="container">
+  <h1>Edit your Event</h1>
 
-<%= simple_form_for @event, html: { multipart: true } do |f| %>
-  <%= f.input :title %>
-  <%= f.input :description %>
-  <%= f.input :start_date, as: :datetime %>
-  <%= f.input :end_date, as: :datetime %>
-  <%= f.input :address,
-  input_html: {data: {address_autocomplete_target: "address"}, class: "d-none", placeholder: 'hello' },
-  wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_address_value: @event.address, address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
-  %>
-  <%= f.input :price %>
-  <%= f.input :spots_available, as: :integer %>
-  <%= f.input :category,
-    collection: @categories,
-    prompt: "Select a category",
-    requiered: true,
-    autofocus: true %>
-  <%= f.input :category,
-    collection: @categories,
-    prompt: "Select a category",
-    requiered: true,
-    autofocus: true %>
-  <%= f.input :photos, as: :file, input_html: { multiple: true } %>
-  <%= f.button :submit %>
-<% end %>
+  <%= simple_form_for @event, html: { multipart: true } do |f| %>
+    <%= f.input :title %>
+    <%= f.input :description%>
+    <%= f.input :start_date, as: :datetime %>
+    <%= f.input :end_date, as: :datetime %>
+    <%= f.input :address,
+    input_html: {data: {address_autocomplete_target: "address"}, class: "d-none", placeholder: 'hello' },
+    wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_address_value: @event.address, address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
+    %>
+    <%= f.input :price %>
+    <%= f.input :spots_available, as: :integer %>
+    <%= f.input :category,
+      collection: @categories,
+      prompt: "Select a category",
+      requiered: true,
+      autofocus: true %>
+    <%= f.input :category,
+      collection: @categories,
+      prompt: "Select a category",
+      requiered: true,
+      autofocus: true %>
+    <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+  <div class="form-actions text-center mt-6">
+    <%= f.button :submit, class: "btn btn-primary text-center" %>
+  </div>
+  <% end %>
+</div>
