--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -23,7 +23,7 @@
                   input_html: { autocomplete: "new-password" } %>
     </div>
 
-    <div class="form-actions">
+    <div class="form-actions text-center mt-6">
       <%= f.button :submit, "Sign up", class: "btn btn-primary text-center" %>
     </div>
   <% end %>
