--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -8,15 +8,12 @@
 
 .welcome-msg {
   text-align: center;
+  padding-top: 20px;
 }
 
 .user-profile {
-  margin: 20px 0px 20px 80px;
+  margin: 20px 0px 30px 80px;
   width: 50%;
-}
-
-.fa-ul {
-  justify-content: center;
 }
 
 .fa-solid, .fas {
