--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,8 +1,8 @@
 <%= simple_form_for @event do |f| %>
   <%= f.input :title %>
   <%= f.input :description %>
-  <%= f.input :start_date, as: :datetime %>
-  <%= f.input :end_date, as: :datetime %>
+  <%= f.input :start_date, as: :string, requiered: true, input_html: { data: { controller: "datepicker" } } %>
+  <%= f.input :end_date, as: :string, requiered: true, input_html: { data: { controller: "datepicker" } } %>
   <%= f.input :address,
   input_html: {data: {address_autocomplete_target: "address"}, class: "d-none"},
   wrapper_html: {data: {controller: "address-autocomplete", address_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}}
@@ -16,7 +16,7 @@
     autofocus: true %>
   <%= f.input :level,
     collection: @level,
-    prompt: "Select a category",
+    prompt: "Select a level",
     requiered: true,
     autofocus: true %>
   <%= f.input :photos, as: :file, input_html: { multiple: true } %>
