styling on groups

--- a/app/assets/stylesheets/components/_group_info.scss
+++ b/app/assets/stylesheets/components/_group_info.scss
@@ -10,7 +10,7 @@
   margin-bottom: 8px;
 }
 
-.group-info-card p{
-  line-height: 0.8;
+.group-info-card li{
+  line-height: 1.0;
   padding-top: 12px;
 }
