--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -18,7 +18,7 @@
       </div>
     </li>
     <li><span class="fa-li"><i class="fa-solid fa-location-dot"></i></span> <%= @event.address %></li>
-    <li><span class="fa-li"><i class="fa-solid fa-signal-bars"></i></span> <%= @event.level %></li>
+    <li><span class="fa-li"><i class="fa-solid fa-arrow-up-short-wide"></i></span> <%= @event.level %></li>
   </ul>
 
   <div class="d-flex align-items-center mb-3">
