--- a/app/views/shared/_group_info.html.erb
+++ b/app/views/shared/_group_info.html.erb
@@ -1,16 +1,19 @@
 <div class="group-info-card">
-  <p>City: <%= @group.city %> </p>
-  <p>Members: <%= @users_count %>  | <%= @group.private ? 'Private group' : 'Public group' %></p>
-  <p>Organized by: <strong><%= @creator %></strong></p>
-  <div class="d-flex">
-    <p>Share: <i class="fa-brands fa-facebook" style="color: #4267B2;"></i>
-              <i class="fa-brands fa-twitter" style="color: #1DA1F2;"></i>
-              </p>
-  </div>
+  <ul class="fa-ul">
+    <li><span class="fa-li"><i class="fa-solid fa-location-dot"></i></span> City: <%= @group.city %> </li>
+    <li><span class="fa-li"><i class="fa-solid fa-users"></i></i></span> Members: <%= @users_count %>  | <%= @group.private ? 'Private group' : 'Public group' %> </li>
+    <li><span class="fa-li"><i class="fa-solid fa-user"></i></span> Organized by: <strong><%= @creator.capitalize %></strong> </li>
+    <div class="d-flex">
+      <li><span class="fa-li"><i class="fa-solid fa-share-nodes"></i></span>
+        Share: <i class="fa-brands fa-facebook" style="color: #4267B2;"></i>
+                <i class="fa-brands fa-twitter" style="color: #1DA1F2;"></i>
+      </li>
+    </div>
+  </ul>
 </div>
 <div class="button d-flex justify-content-center">
   <% if current_user.groups.include?(@group) %>
-    <button class="btn btn-success col-9"> You're a member </button>
+    <button class="btn btn-success"> You're a member </button>
   <% else %>
     <%= link_to "Join Group", group_user_groups_path(@group), data: {turbo_method: :post}, class:"btn btn-primary col-9" %>
   <% end %>
