fix landing page/index

--- a/app/views/shared/_index_card_all.html.erb
+++ b/app/views/shared/_index_card_all.html.erb
@@ -1,3 +1,4 @@
+<% events.each do |event| %>
 
 <%= link_to event_path(event) do %>
   <div class="event-card-long">
@@ -15,4 +16,4 @@
   </div>
 <% end %>
 
-
+<% end %>
