--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -5,6 +5,8 @@
   <div class="category-container">
     <%= render "shared/category_bar" %>
 
+    <%= render "shared/level_filter" %>
+
     <div class="results-card-container">
       <% if params[:query].present? %>
         <h2>Results for <%= @category %></h2>
@@ -14,11 +16,11 @@
 
       <h1><%# @event_city %></h1>
       <div class="index-event-cards" data-filter-target="cards">
-        <%# <% @events.each do |event| %>
+        <%# @events.each do |event| %>
           <div class="index-event-card">
-            <%= render "shared/event_card_long", events: @events %>
+            <%= render "shared/index_card_all", events: @events %>
           </div>
-        <%# <% end %>
+        <%# end%>
       </div>
     </div>
   </div>
