--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -16,7 +16,7 @@
       <div class="index-event-cards" data-filter-target="cards">
         <%# <% @events.each do |event| %>
           <div class="index-event-card">
-            <%= render "shared/event_card_long", events: @events %>
+            <%= render "shared/index_card_all", events: @events %>
           </div>
         <%# <% end %>
       </div>
