--- a/app/views/shared/_level_filter.html.erb
+++ b/app/views/shared/_level_filter.html.erb
@@ -7,9 +7,18 @@
           <span style="font-size:1.8em; color:orange; ">Level</span>
         </button>
         <ul class="dropdown-menu">
-          <li><a data-filter-target="level" class="dropdown-item" href="#">Beginner</a></li>
-          <li><a data-filter-target="level" class="dropdown-item" href="#">Intermediate</a></li>
-          <li><a data-filter-target="level" class="dropdown-item" href="#">Advanced</a></li>
+          <li><a data-filter-target="level"
+                 data-action="click->filter#level"
+                 class="dropdown-item"
+                 href="#" >Beginner</a></li>
+          <li><a data-filter-target="level"
+                 data-action="click->filter#level"
+                 class="dropdown-item"
+                 href="#">Intermediate</a></li>
+          <li><a data-filter-target="level"
+                 data-action="click->filter#level"
+                 data-action="click->filter#level"
+                 class="dropdown-item" href="#">Advanced</a></li>
         </ul>
   </div>
 </div>
