--- a/app/views/pages/landing_page.html.erb
+++ b/app/views/pages/landing_page.html.erb
@@ -12,21 +12,21 @@
         <span style="font-size:1.8em; color:orange; "> Berlin</span>
       </button>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Berlin</a></li>
-        <li><a class="dropdown-item" href="#">Munich</a></li>
-        <li><a class="dropdown-item" href="#">Paris</a></li>
+      <% @unique_citys.each do |city| %>
+        <li><%= link_to "#{city}", events_path(query: "#{city}") %></li>
+      <% end %>
       </ul>
     </div>
   </div>
 
 
   <div class="index-event-cards">
-    <% @events.each do |event| %>
+    <% @near_events.each do |event| %>
     <div class="index-event-card">
       <%= render "shared/event_card_long", event: event %>
     </div>
     <% end %>
   </div>
   <br>
-  <%= link_to "All Events", events_path, class: "btn btn-primary btn-lg" %>
+  <%= link_to "See all Events in #{@city}", events_path, class: "btn btn-primary btn-lg" %>
 </div>
